--- a/css/index.scss
+++ b/css/index.scss
@@ -2170,7 +2170,7 @@ body{
 			}
 			
 			h1{
-				color: rgb(218, 218, 218);
+				color: #999;
 				font-family: $ubuntu;
 				font-size: 45px;
 				position: relative;
@@ -2395,7 +2395,7 @@ body{
 
 			// home page, hotsite, presentation, login, etc
 			.auth{
-				width: 430px;
+				width: 475px;
 				float: right;
 
 				span{
@@ -2515,7 +2515,7 @@ body{
 					-webkit-transition: all .45s ease-in-out;
 
 					&.btn-lojista{
-						margin: 5px 0 0 15px;
+						margin: 5px 0 0 12px;
 
 					}
 				}
