--- a/css/lojista.scss
+++ b/css/lojista.scss
@@ -68,7 +68,10 @@ body{
 			display: block;
 			z-index: 5;
 			top: 0;
-
+			
+			a{
+				text-decoration: none;
+			}
 
 			.brand{
 				background: url(../images/marca.png) no-repeat;
@@ -498,7 +501,7 @@ body{
 						border-bottom: 5px solid #538723;
 						font-family: $ubuntu;
 						position: relative;
-						top: 26px;
+						top: 47px;
 						-webkit-border-radius: 9px 9px 0 0;
 						-moz-border-radius: 9px 9px 0 0;
 						border-radius: 9px 9px 0 0;
