Esperando print da tela

--- a/css/lojista.scss
+++ b/css/lojista.scss
@@ -380,6 +380,10 @@ body{
 							margin-left: 16px;
 							text-shadow: 1px 1px 0 #d7d7d7;
 							font-weight: bold;
+
+							a{
+								color: $verde;
+							}
 						}
 					}
 
