--- a/css/index.scss
+++ b/css/index.scss
@@ -29,7 +29,7 @@ $esporte: #00A550;
 	  opacity: $valor*0.1;
 }
 
-
+@import "entypo";
 
 html,body{height: 100%;}
 
@@ -1821,6 +1821,17 @@ body{
 						background: url(../images/ajax-loader.gif) center no-repeat;
 					}
 
+					.ofertasPorShopping{
+						width: 100%;
+						height: auto;
+						display: table;
+						margin: 15px 0;
+
+						legend{
+							margin: 5px;
+						}
+					}
+
 					
 					.ofertaUnique{
 						float: left;
@@ -2001,7 +2012,7 @@ body{
 			padding-bottom: 25px;
 
 			&.notLogged{
-				margin-bottom: -75px;
+				margin-bottom: -130px;
 				padding-bottom: 0;
 			}
 
@@ -2245,12 +2256,12 @@ body{
 						h5{left: -8px;}
 					}
 					&.cart{
-						background: url(../images/cart.png) no-repeat center center;
+						background: url(../images/lupa.png) no-repeat center center;
 						width: 148px;
 					}
 					&.deal{
-						background: url(../images/deal2.png) no-repeat center center;
 						width: 164px;
+						background: url(../images/deal2.png) no-repeat center center;
 					}
 				}
 				
@@ -2713,6 +2724,11 @@ body{
 						.icon{ background-position: -189px 0; }
 					}
 
+					&.vitor{
+						.photo{	background-position: -900px 0; }
+						.icon{ background-position: -189px 0; }
+					}
+
 					&.tiosam{
 						.photo{	background-position: -750px 0; 
 							&:after{
@@ -2800,13 +2816,17 @@ body{
 		}
 	}
 
+	.footerPush{
+		width: 35px;
+	}
+
 	#footerMain{
 		width: 100%;
 		height: 35px;
 		background: $verde;
 		clear: both;
 		position: relative;
-		top: 75px;
+		top: 130px;
 		
 		.notLogged{top: 0;}
 
@@ -2834,6 +2854,101 @@ body{
 			}
 		}
 		
+	}
+
+	.tooltipNewSocial{
+		[class*="entypo-"]:before {
+		  font-family: 'entypo', sans-serif;
+		}
+
+		::selection {
+		background: transparent;
+		}
+
+		input[type="checkbox"]{display:none;}
+
+		.checkbox:checked + .label{
+		  background:#7B7484;
+		  color:#231733;
+		}
+
+		.checkbox:checked ~ .social {
+		  opacity:1;
+		  -webkit-transform: scale(1) translateY(-90px);
+		  -moz-transform:scale(1) translateY(-90px);
+		  -o-transform:scale(1) translateY(-90px);
+		  transform:scale(1) translateY(-90px);
+		    -webkit-transition:.5s;
+		  -moz-transition:.5s;
+		  -o-transition:.5s;
+		  transition:.5s;
+		}
+
+		.label {
+		  font-size:16px;
+		  cursor:pointer;
+		  margin:0;
+		  padding:5px 10px;
+		  
+		  border-radius:10%;
+		  color:#7B7484;
+		}
+
+		.social {
+		  transform-origin:50% 0%;
+		  
+		  -webkit-transform: scale(0) translateY(-190px);
+		  -moz-transform:scale(0) translateY(-190px);
+		  -o-transform:scale(0) translateY(-190px);
+		  transform:scale(0) translateY(-190px);
+		  
+		  opacity:0;
+		}
+		ul {
+		  position:relative;
+		  left:0;
+		  right:0;
+		  margin:auto;
+		  color:#fff;
+		  height:46px;
+		  width:180px;
+		  background:#3B5998;
+		  padding:0;
+		  list-style:none;
+		}
+
+		ul li {
+		  font-size:20px;
+		  
+		  cursor:pointer;
+		  width:60px;
+		  margin:0;
+		  padding:12px 0;
+		  text-align:center;
+		  float:left;
+		  display:block;
+		  height:22px;}
+
+		ul li:hover {color:rgba(0,0,0,.5);}
+
+		ul:after {
+		  content:'';
+		  display:block;
+		  position:absolute;
+		  left:0;
+		  right:0;
+		  margin:35px auto;
+		  height:0;
+		  width:0;
+		  
+		  border-left: 20px solid transparent;
+			border-right: 20px solid transparent;
+			
+			border-top: 20px solid #3B5998;
+		}
+
+		li[class*="twitter"] {background:#6CDFEA;padding:12px 0;}
+		li[class*="gplus"] {background:#E34429;padding:12px 0;}
 	}
 
 
@@ -3211,6 +3326,7 @@ html {
 .tooltipSocial{
 	width: auto;
 	height: 32px;
+	display: table;
 
 	a{cursor: pointer;}
 
